# DeepspaceOutpost.dx11

./: .gitignore  3Dmigration.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  MIGRATION_ROADMAP.md  Message.md  optimize.md
.github/: agents.md  coding-standards.md  copilot-instructions.md
DeepspaceOutpost/: CMakeLists.txt  Camera.cpp  Camera.h  GameApp.h  GameComponents.h  GameUniverse.cpp  GameUniverse.h  GameWindows.cpp  GameWindows.h  LocalObjects.cpp  RenderContext.cpp  RenderQueue.h  ReplicatedScene.h  ReplicationClient.cpp  ReplicationClient.h  SceneMeshes.cpp  SceneMeshes.h  SettingsWindow.cpp  SettingsWindow.h  Universe.h  WinMain.cpp  alg_data.h  compat.h  config.h  docked.cpp  docked.h  elite.cpp  elite.h  file.cpp  file.h  gfx.h  intro.cpp  intro.h  keyboard.h  main.cpp  main.h  missions.cpp  options.cpp  options.h  pilot.cpp  (+18 more)
DeepspaceOutpost/platform/: Font.cpp  Font.h  GfxRenderSink.cpp  Image.cpp  Image.h  Renderer.cpp  Renderer.h  audio_win.h  audio_xa2.cpp  dialog_win.cpp  gfx_dx11.cpp  gfx_dx11.h  input_win.cpp  input_win.h  platform_win.cpp  platform_win.h
GameLogic/: AreaOfInterest.h  CMakeLists.txt  Combat.h  CombatMessages.h  CombatSystem.h  DespawnTracker.h  Economy.h  FlightInput.h  FlightSystem.h  Galaxy.h  GalaxyGen.h  GameLogic.cpp  GameLogic.h  MissileSystem.h  MotionSystem.h  ServerSessions.h  SimComponents.h  SnapshotBuilder.h  SpawnDirector.h  StationServices.h
NeuronClient/: CMakeLists.txt  CameraFollow.h  ClientEngine.cpp  ClientEngine.h  GameMain.h  GfxRenderSink.h  Mesh.h  RenderContext.cpp  RenderContext.h  RenderQueue.cpp  RenderQueue.h  ReplicatedScene.h  ReplicationClient.cpp  ReplicationClient.h  SceneProjection.h  Strings.cpp  Strings.h  ViewMetrics.h  gfx.h  vector.cpp  vector.h
NeuronClient/graphics/: ConstantBuffers.h  DDSTextureLoader.cpp  DDSTextureLoader.h  GraphicsCore.cpp  GraphicsCore.h  ImmediateRenderer.cpp  ImmediateRenderer.h  Render2D.cpp  Render2D.h  Scene3D.cpp  Scene3D.h  TextureManager.cpp  TextureManager.h
NeuronClient/gui/: Canvas.cpp  Canvas.h  ClientEngine.h  DX9TextRenderer.cpp  DX9TextRenderer.h  GameApp.h  GuiButton.cpp  GuiButton.h  GuiOverlay.cpp  GuiOverlay.h  GuiWindow.cpp  GuiWindow.h  Input.h  Resource.cpp  Resource.h  TextRenderer.cpp  TextRenderer.h  Widget.h
NeuronClient/platform/: Font.h  GfxRenderSink.cpp  Image.cpp  Image.h  Renderer.cpp  Renderer.h  audio_xa2.cpp  dialog_win.cpp  gfx2d.cpp  gfx2d.h  gfx_dx11.cpp  input_win.cpp  input_win.h  platform_win.cpp  platform_win.h  scanner_palette.h
NeuronClient/shaders/: dustPS.hlsl  dustVS.hlsl  generic-colored-3dPS.hlsl  generic-colored-3dVS.hlsl  generic-coloredPS.hlsl  generic-coloredVS.hlsl  generic-texturedPS.hlsl  generic-texturedVS.hlsl  gui-windowVS.hlsl  render2dPS.hlsl  render2dVS.hlsl  scene3dPS.hlsl  scene3dVS.hlsl  scenebbPS.hlsl  scenebbVS.hlsl  skyboxPS.hlsl  skyboxVS.hlsl  text-outlinePS.hlsl  text-overlayVS.hlsl  textPS.hlsl  textVS.hlsl
NeuronClient/shaders/CompiledShaders/: dustPS.h  dustVS.h  generic-colored-3dPS.h  generic-coloredPS.h  generic-coloredVS.h  generic-texturedVS.h  gui-windowPS.h  gui-windowVS.h  render2dPS.h  render2dVS.h  scene3dPS.h  scene3dVS.h  scenebbPS.h  scenebbVS.h  skyboxPS.h  skyboxVS.h  text-outlinePS.h  text-overlayPS.h  text-overlayVS.h  textPS.h  textVS.h
NeuronClient/shaders/partials/: common.hlsli  dust.hlsli  fog.hlsli  hdr.hlsli  immediate-vertex.hlsli  lighting.hlsli  matrices.hlsli  perdraw.hlsli  render2d.hlsli  scene3d.hlsli  scenebb.hlsli  skybox.hlsli  texenv.hlsli
NeuronCore/: CMakeLists.txt  ClientInput.h  DataReader.h  DataWriter.h  Debug.h  ECS.h  EventManager.cpp  EventManager.h  FileSys.cpp  FileSys.h  GalaxyManifest.h  GameEvents.h  GameMath.h  Json.cpp  Json.h  NetLib.cpp  NetLib.h  NeuronCore.cpp  NeuronCore.h  NeuronHelper.h  ReliableChannel.h  Replication.h  SnapshotInterpolator.h  SnapshotPacketizer.h  SnapshotReceiver.h  SpatialGrid.h  StationProtocol.h  TasksCore.cpp  TasksCore.h  TimerCore.h  Vector3d.h  Vector3i64.h
NeuronCore/Messages/: Catalog.h  CatalogTools.h  Framing.h  MessageBus.h  MessageEndpoint.h  MessageId.h  MessageTraits.h  NetEntityId.h  PacketInspect.h  Registry.h  Reliable.h  Serialize.h
NeuronCore/Messages/Defs/: CoreEvents.h  InputActions.h  InputCommand.h
NeuronServer/: CMakeLists.txt
Server/: CMakeLists.txt  Main.cpp
Tests/: AreaOfInterestTests.cpp  CMakeLists.txt  CameraFollowTests.cpp  ClientInputTests.cpp  CombatSystemTests.cpp  CombatTests.cpp  EconomyTests.cpp  EcsTests.cpp  FlightInputTests.cpp  FlightTests.cpp  GalaxyGenTests.cpp  GalaxyManifestTests.cpp  GalaxyTests.cpp  InterpolationTests.cpp  LegacyMathGoldenTests.cpp  MathTests.cpp  MotionTests.cpp  ReliableChannelTests.cpp  ReplicatedSceneTests.cpp  ReplicationTests.cpp  SessionTests.cpp  SnapshotTransportTests.cpp  SpatialTests.cpp  SpawnDirectorTests.cpp  StationProtocolTests.cpp  StationServicesTests.cpp  TestFramework.h  TestMain.cpp  UniverseTests.cpp
Tests/GameLogic/: AreaOfInterestTests.cpp  CMakeLists.txt  CombatMessagesTests.cpp  CombatSystemTests.cpp  CombatTests.cpp  EconomyTests.cpp  FlightInputTests.cpp  FlightTests.cpp  GalaxyGenTests.cpp  GalaxyManifestTests.cpp  GalaxyTests.cpp  MissileSystemTests.cpp  MotionTests.cpp  ReplicationTests.cpp  SessionTests.cpp  SpawnDirectorTests.cpp  StationServicesTests.cpp
Tests/NeuronClient/: CMakeLists.txt  CameraFollowTests.cpp  MeshTests.cpp  RenderQueueTests.cpp  ReplicatedSceneTests.cpp  SceneProjectionTests.cpp  UniverseTests.cpp  ViewMetricsTests.cpp
Tests/NeuronCore/: CMakeLists.txt  CatalogGovernanceTests.cpp  CatalogToolsTests.cpp  ClientInputTests.cpp  EcsTests.cpp  InputActionsTests.cpp  InterpolationTests.cpp  LegacyMathGoldenTests.cpp  MathTests.cpp  MessageBusTests.cpp  MessageCodecTests.cpp  MessageEndpointTests.cpp  MessageFuzzTests.cpp  MessageTestMessages.h  MessageWireTests.cpp  PacketInspectTests.cpp  ReliableChannelTests.cpp  ReliableEventsTests.cpp  SnapshotTransportTests.cpp  SpatialTests.cpp  StationProtocolTests.cpp
Tests/NeuronServer/: CMakeLists.txt  SmokeTests.cpp
(+198 files in other folders)
